text and little css is added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>JS Basic</title>
 </head>
 
 <body>
+    <div class="start">
+        <h1>Javascript for bignner</h1>
+        <p>please open the console by inspecting the page</p>
+    </div>
     <script src="basic.js"></script>
     <script src="./arr.js"></script>
 </body>
