text and little css is added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="start">
         <h1>Javascript for bignner</h1>
-        <p>please open the console by inspecting the page</p>
+        <p>please open the console by inspecting the page to check the javascript</p>
     </div>
     <script src="basic.js"></script>
     <script src="./arr.js"></script>
